add_library(BtMigrateCommon
    Exception.cpp
    Exception.h
    IFileStreamProvider.cpp
    IFileStreamProvider.h
    IForwardIterator.h
    Logger.cpp
    Logger.h
    SignalHandler.cpp
    SignalHandler.h
    ThreadSafeIterator.h
    Util.cpp
    Util.h)

target_link_libraries(BtMigrateCommon
    PUBLIC
        jsoncons
    PRIVATE
        digestpp::digestpp
        fmt::fmt
        Threads::Threads)
