add_library(BtMigrateStore
    DebugTorrentStateIterator.cpp
    DebugTorrentStateIterator.h
    DelugeStateStore.cpp
    DelugeStateStore.h
    ITorrentStateStore.cpp
    ITorrentStateStore.h
    TorrentStateStoreFactory.cpp
    TorrentStateStoreFactory.h
    TransmissionStateStore.cpp
    TransmissionStateStore.h
    rTorrentStateStore.cpp
    rTorrentStateStore.h
    uTorrentStateStore.cpp
    uTorrentStateStore.h
    uTorrentWebStateStore.cpp
    uTorrentWebStateStore.h)

target_link_libraries(BtMigrateStore
    PUBLIC
        BtMigrateCodec
        BtMigrateCommon
        BtMigrateTorrent)

target_link_libraries(BtMigrateStore
    PRIVATE
        jsoncons
        pugixml::pugixml
        sqlite_orm::sqlite_orm)
